@@ -7,16 +7,34 @@ import school.faang.user_service.entity.User;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface UserMapper {
 
     @Mapping(target = "mentorIds", expression = "java(UserMapper.toIds(user.getMentors()))")
     @Mapping(target = "menteeIds", expression = "java(UserMapper.toIds(user.getMentees()))")
-    UserDto toDto(User user);
+    default UserDto toDto(User user) {
+        if (user == null) {
+            return null;
+        }
+        return UserDto.builder()
+                .id(user.getId())
+                .username(user.getUsername())
+                .email(user.getEmail())
+                .mentorIds(user.getMentors() == null || user.getMentors().isEmpty()
+                        ? null
+                        : user.getMentors().stream().map(User::getId).toList())
+                .menteeIds(user.getMentees() == null || user.getMentees().isEmpty()
+                        ? null
+                        : user.getMentees().stream().map(User::getId).toList())
+                .build();
+    }
+
 
     static List<Long> toIds(List<User> users) {
-        return users == null ? List.of() : users.stream().map(User::getId).toList();
+        return users == null ? List.of() : users.stream().map(User::getId).collect(Collectors.toList());
     }
 
     static List<UserDto> usersToUserDtos(List<User> users) {
